First version which compiles from Eclipse without bugs