@@ -27,11 +27,12 @@ import org.compiere.util.CLogger;
 import org.zkoss.zk.au.out.AuScript;
 import org.zkoss.zk.ui.util.Clients;
 
-import sun.misc.BASE64Encoder;
+import java.util.Base64;;
 
 /**
  * class to manage browser token for auto authentication
  * @author hengsin
+ * @author Marek Mosiewicz - change Base64 encoder to standard API
  *
  */
 public final class BrowserToken {
@@ -116,15 +117,13 @@ public final class BrowserToken {
 	
 	private static String getHomeToken() throws UnsupportedEncodingException {
 		String home = Adempiere.getAdempiereHome();	
-		BASE64Encoder encoder = new BASE64Encoder();
-		home = encoder.encode(home.getBytes("UTF-8"));
 		home = URLEncoder.encode(home, "UTF-8");
 		return home;
 	}
 	
 	private static String getPasswordHash(MSession session, MUser user) throws UnsupportedEncodingException, NoSuchAlgorithmException {
 		MessageDigest digest = MessageDigest.getInstance("SHA-512");
-		BASE64Encoder encoder = new BASE64Encoder();
+		Base64.Encoder encoder =  Base64.getEncoder();
 	    digest.reset();
 	    if (session.getWebSession() != null)
 	    	digest.update(session.getWebSession().getBytes("UTF-8"));
@@ -134,7 +133,7 @@ public final class BrowserToken {
 	    else
 	    	password = new String("");
 	    byte[] input = digest.digest(password.getBytes("UTF-8"));
-	    String hash = encoder.encode(input);
+	    String hash = encoder.encodeToString(input);
 	    hash = URLEncoder.encode(hash, "UTF-8");
 	    
 	    return hash;
